--- a/style.css
+++ b/style.css
@@ -93,38 +93,11 @@ head{
     width: 80%;
     margin: auto;
 }
-.yakors li a{
-    color: white;
-    background: #FFBD59;
-    padding: 4px;
-    position: relative;
-    text-decoration: none;
-    
-}
+
 p{
     line-height: 35px;
 }
-.yakors li{
-    list-style: none;
-    margin-top: 13px;
-}
-.yakors li:first-child{
-    margin-top: 0px;
-}
-.yakors {
-    font-family: 'Montserrat Alternates', sans-serif;
-    position: fixed; /* Фиксированное положение */
-    left: 10px; /* Расстояние от правого края окна браузера */
-    top: 20%; /* Расстояние сверху */
-    padding: 10px; /* Поля вокруг текста */ 
-    background: #FFBD59;
-    border-radius: 10px;
-    transition: 0.5;
-}
-.yakors li a:hover{
-    color: black;
-    transition: 1;
-}
+
 .line{
     display: flex;
     justify-content: center;
@@ -151,7 +124,7 @@ p{
     text-align: center;
 }
 .main_block{
-    height: 100%;
+    max-height: 100%;
     background: #7D89AB;
 }
 .contact h1{
@@ -236,6 +209,7 @@ p{
 #m_p{
     margin-top: 50px;
     margin-bottom: 50px;
+    text-indent: 20px;
 }
 .dialog{
     display: flex;
@@ -263,7 +237,99 @@ p{
 .photo{
     margin: 60px 0px;
 }
+.yakors li a:hover{
+    color: black;
+    transition: 1;
+}
+.yakors li a{
+    color: white;
+    background: #FFBD59;
+    padding: 4px;
+    position: relative;
+    text-decoration: none;
+    
+}
+.yakors li{
+    list-style: none;
+    margin-top: 13px;
+}
+.yakors li:first-child{
+    margin-top: 0px;
+}
+.yakors {
+    font-family: 'Montserrat Alternates', sans-serif;
+    position: fixed; /* Фиксированное положение */
+    left: 10px; /* Расстояние от правого края окна браузера */
+    top: 20%; /* Расстояние сверху */
+    padding: 10px; /* Поля вокруг текста */ 
+    background: #FFBD59;
+    border-radius: 10px;
+    z-index: 1;
+}
+.news{
+    position: absolute;
+    top: 1600px;
+    left: 3%;
+    z-index: 0;
+}
+.box:first-child{
+    max-height: 600px;
+}
+.box{
+    font-family: 'Montserrat Alternates', sans-serif;
+    max-height: 500px;
+    max-width: 200px;  
+    border: #FFBD59 5px solid;
+    border-radius: 20px;
+    background: white;
+    color: black;
+}
+.box_in_box{
+    padding: 5%;
+}
+.news2{
+    position: absolute;
+    top: 3000px;
+    right: 3%;
+}
+.news3{
+    position: absolute;
+    top: 5000px;
+    left: 3%;
+    z-index: 0;
+}
+.news4{
+    position: absolute;
+    top: 6400px;
+    right: 3%;
+}
+.news span{
+    font-weight: 300;
+}
+.news2 span{
+    font-weight: 300;
+}
+.news3 span{
+    font-weight: 300;
+}
+.news4 span{
+    font-weight: 300;
+}
 
+@media screen and (max-width: 1500px){
+    .news{
+        display: none;
+    }
+    .news2{
+        display: none;
+    }
+    .news3{
+        display: none;
+    }
+    .news4{
+        display: none;
+    }
+  }
 @media screen and (max-width: 1000px){
    .yakors{
        display: none;
@@ -297,6 +363,13 @@ p{
     p{
         line-height: 15px;
     }
+    .yakors{
+        display: block;
+        position: relative;
+        margin: auto;
+        width: 150px;
+        left: 0%;
+    }
  }
 
  @media screen and (max-width: 880px){
@@ -314,10 +387,10 @@ p{
         width: 260px;
      }
     .text_photo p{
-         font-size: 9px;
+         font-size: 11px;
      }
     .text_photo_zerkalo p{
-         font-size: 9px;
+         font-size: 11px;
      }
     .text_photo .photo img{
         height: 160px;
@@ -345,6 +418,13 @@ p{
         border: 5px solid #FFBD59;
         border-bottom: 0px;
         width: 400px;
+    }
+    .yakors{
+        display: block;
+        position: relative;
+        margin: auto;
+        width: 150px;
+        left: 0%;
     }
   }
 
